--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
-    "prettier": "2.4.1"
+    "prettier": "2.4.1",
+    "typescript": "~4.0.0"
   },
   "private": true
 }
