--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.8.0",
     "@react-navigation/stack": "^5.10.0",
+    "avataaars": "^2.0.0",
     "expo": "^42.0.0",
     "expo-dev-client": "^0.5.1",
     "expo-status-bar": "~1.0.4",
